--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
   "name": "print-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "pkg": "pkg .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Matthias",
   "license": "ISC",
-  "description": "",
+  "description": "Cross-platform Node.js print server with PDF support",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "pdf-to-printer": "^5.6.0",
     "unix-print": "^1.3.2"
+  },
+  "bin": "server.js",
+  "pkg": {
+    "assets": [
+      "bin/SumatraPDF-3.5.2-32.exe"
+    ],
+    "targets": [
+      "node18-win-x64",
+      "node18-macos-x64"
+    ],
+    "outputPath": "dist"
   }
 }
